--- a/AutoMall/ViewControllers/Mall/SettlementCell.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementCell.xib
@@ -16,17 +16,17 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="衬衫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fag-Wj-k66">
-                        <rect key="frame" x="20" y="8" width="99" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="衬衫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fag-Wj-k66">
+                        <rect key="frame" x="20" y="10" width="29" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="￥：100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATp-Zl-ahb">
-                        <rect key="frame" x="20" y="33" width="107" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥：100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATp-Zl-ahb">
+                        <rect key="frame" x="20" y="33" width="52.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.90588235289999997" green="0.38431372549999998" blue="0.1137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -63,16 +63,16 @@
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="centerY" secondItem="fWo-NW-L5P" secondAttribute="centerY" id="B4Z-fd-qFx"/>
                     <constraint firstItem="fWo-NW-L5P" firstAttribute="leading" secondItem="Uds-sv-RbJ" secondAttribute="trailing" constant="-18" id="EoS-6L-IuX"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="height" secondItem="fWo-NW-L5P" secondAttribute="height" id="NkN-Ev-Oob"/>
+                    <constraint firstAttribute="bottom" secondItem="ATp-Zl-ahb" secondAttribute="bottom" constant="10" id="Qg0-uu-crJ"/>
+                    <constraint firstItem="fag-Wj-k66" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Z7N-0W-UKS"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="width" secondItem="fWo-NW-L5P" secondAttribute="width" id="fLY-aq-Fjc"/>
                     <constraint firstItem="fag-Wj-k66" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="gc4-M0-JZN"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="height" secondItem="fWo-NW-L5P" secondAttribute="height" id="heT-TG-n2f"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="centerY" secondItem="fWo-NW-L5P" secondAttribute="centerY" id="jYN-ka-WKn"/>
                     <constraint firstItem="fWo-NW-L5P" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="lge-gp-Ohs"/>
                     <constraint firstItem="ATp-Zl-ahb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="pOA-mf-wlU"/>
-                    <constraint firstItem="fag-Wj-k66" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="pl4-jK-18f"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="leading" secondItem="ORV-1F-sba" secondAttribute="trailing" constant="-18" id="rBl-Qi-iCY"/>
                     <constraint firstAttribute="trailing" secondItem="fWo-NW-L5P" secondAttribute="trailing" constant="8" id="wLI-3B-bWm"/>
-                    <constraint firstItem="ATp-Zl-ahb" firstAttribute="top" secondItem="fag-Wj-k66" secondAttribute="bottom" constant="8" id="xlh-nX-AM6"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
