--- a/AutoMall/ViewControllers/PersonalCenter/AddressListCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/AddressListCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张三李四" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQS-y1-vBI">
@@ -28,21 +28,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收货地址 收货地址 收货地址 收货地址 收货地址 收货地址 收货地址 收货地址" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xK-jg-5Xk">
-                        <rect key="frame" x="16" y="49.5" width="264" height="42"/>
+                        <rect key="frame" x="16" y="49.5" width="288" height="42"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="42" id="bbc-JC-tg0"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkbox_yes" translatesAutoresizingMaskIntoConstraints="NO" id="F8b-MY-DYc">
-                        <rect key="frame" x="288" y="38" width="24" height="24"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="24" id="P7y-s0-S6f"/>
-                            <constraint firstAttribute="width" constant="24" id="pXx-WB-Sth"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18538120000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WsH-uC-0B9">
                         <rect key="frame" x="16" y="29" width="96.5" height="21"/>
                         <constraints>
@@ -52,29 +45,37 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="默认" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjU-Ox-zrT">
+                        <rect key="frame" x="264" y="8" width="40" height="20"/>
+                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="7UO-Bl-DId"/>
+                            <constraint firstAttribute="width" constant="40" id="B2P-rn-1Pn"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="WsH-uC-0B9" firstAttribute="top" secondItem="gQS-y1-vBI" secondAttribute="bottom" id="48D-ky-KaU"/>
-                    <constraint firstItem="F8b-MY-DYc" firstAttribute="leading" secondItem="8xK-jg-5Xk" secondAttribute="trailing" constant="8" id="9dy-zt-UjF"/>
-                    <constraint firstItem="F8b-MY-DYc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LHR-hC-Pp7"/>
+                    <constraint firstAttribute="trailing" secondItem="bjU-Ox-zrT" secondAttribute="trailing" constant="16" id="CM4-0V-3dO"/>
                     <constraint firstItem="WsH-uC-0B9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RlE-e7-Jxr"/>
-                    <constraint firstAttribute="trailing" secondItem="F8b-MY-DYc" secondAttribute="trailing" constant="8" id="Ux9-gK-rU7"/>
+                    <constraint firstAttribute="trailing" secondItem="8xK-jg-5Xk" secondAttribute="trailing" constant="16" id="Wbs-hv-qSY"/>
                     <constraint firstItem="gQS-y1-vBI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="iUF-fF-8vE"/>
                     <constraint firstItem="gQS-y1-vBI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="lqG-DK-JpM"/>
                     <constraint firstAttribute="bottom" secondItem="8xK-jg-5Xk" secondAttribute="bottom" constant="8" id="nRH-yR-Z8W"/>
                     <constraint firstItem="8xK-jg-5Xk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="oPA-Mf-ld3"/>
+                    <constraint firstItem="bjU-Ox-zrT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="t5T-nj-OPB"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="addressL" destination="8xK-jg-5Xk" id="C1I-bE-qBQ"/>
-                <outlet property="defaultIM" destination="F8b-MY-DYc" id="s9Q-pj-bNf"/>
+                <outlet property="defaultL" destination="bjU-Ox-zrT" id="9ye-gU-ODD"/>
                 <outlet property="phoneL" destination="WsH-uC-0B9" id="ukC-qG-uQi"/>
                 <outlet property="unameL" destination="gQS-y1-vBI" id="Yq4-aV-i8I"/>
             </connections>
-            <point key="canvasLocation" x="-31" y="-58"/>
+            <point key="canvasLocation" x="-337" y="24"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="checkbox_yes" width="90" height="90"/>
-    </resources>
 </document>
