--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditSkillCertificationVC.xib
@@ -13,7 +13,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EmployeeEditSkillCertificationVC">
             <connections>
                 <outlet property="contentTF" destination="cvm-Ou-jQg" id="ws2-my-6Hn"/>
-                <outlet property="imgL" destination="K4Q-WP-9Nh" id="WZa-ry-xZz"/>
                 <outlet property="imgView" destination="woS-Rp-xld" id="Jpc-ej-2oI"/>
                 <outlet property="nameTF" destination="rYU-l2-pHd" id="nrJ-7Q-hOz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -94,7 +93,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woS-Rp-xld" customClass="WPImageView">
+                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="uploadImgWT" translatesAutoresizingMaskIntoConstraints="NO" id="woS-Rp-xld" customClass="WPImageView">
                                     <rect key="frame" x="54" y="99.5" width="267" height="150"/>
                                     <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
@@ -102,22 +101,11 @@
                                         <constraint firstAttribute="height" constant="150" id="clL-DR-IHd"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加证书（可选）" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4Q-WP-9Nh">
-                                    <rect key="frame" x="112.5" y="134.5" width="150" height="80"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="80" id="ZZh-4Y-rES"/>
-                                        <constraint firstAttribute="width" constant="150" id="oyy-hT-EFO"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="jBH-NF-gsl" firstAttribute="top" secondItem="rYU-l2-pHd" secondAttribute="bottom" constant="7" id="2HC-SS-S6S"/>
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="leading" secondItem="Hpq-9B-IT9" secondAttribute="trailing" constant="8" id="2Te-Ab-sSa"/>
-                                <constraint firstItem="K4Q-WP-9Nh" firstAttribute="centerX" secondItem="woS-Rp-xld" secondAttribute="centerX" id="2hI-0N-Ksg"/>
                                 <constraint firstItem="woS-Rp-xld" firstAttribute="top" secondItem="ff9-Mu-92y" secondAttribute="bottom" constant="10" id="4aR-gc-ScB"/>
                                 <constraint firstAttribute="trailing" secondItem="cvm-Ou-jQg" secondAttribute="trailing" constant="16" id="5ad-3H-5hV"/>
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="leading" secondItem="Hpq-9B-IT9" secondAttribute="trailing" constant="8" id="9v2-d8-Uzi"/>
@@ -133,7 +121,6 @@
                                 <constraint firstItem="cvm-Ou-jQg" firstAttribute="centerY" secondItem="Hpq-9B-IT9" secondAttribute="centerY" id="knF-YN-hJv"/>
                                 <constraint firstItem="woS-Rp-xld" firstAttribute="centerX" secondItem="4cE-3n-sOg" secondAttribute="centerX" id="mKg-7T-vxt"/>
                                 <constraint firstItem="ff9-Mu-92y" firstAttribute="leading" secondItem="4cE-3n-sOg" secondAttribute="leading" id="oiy-19-0Y9"/>
-                                <constraint firstItem="K4Q-WP-9Nh" firstAttribute="centerY" secondItem="woS-Rp-xld" secondAttribute="centerY" id="pfB-Lh-D9O"/>
                                 <constraint firstItem="ff9-Mu-92y" firstAttribute="top" secondItem="jBH-NF-gsl" secondAttribute="bottom" constant="44" id="w5i-Ee-a27"/>
                                 <constraint firstItem="jBH-NF-gsl" firstAttribute="leading" secondItem="4cE-3n-sOg" secondAttribute="leading" constant="16" id="yhg-iX-v9Q"/>
                                 <constraint firstAttribute="trailing" secondItem="ff9-Mu-92y" secondAttribute="trailing" id="za8-qj-x8Z"/>
@@ -175,4 +162,7 @@
             <point key="canvasLocation" x="10" y="14"/>
         </view>
     </objects>
+    <resources>
+        <image name="uploadImgWT" width="1125" height="633"/>
+    </resources>
 </document>
